[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main/ScriptSetting/Video.gd" type="Script" id=1]
[ext_resource path="res://Main/DecoratorMenu/RANASALTARINA.jpg" type="Texture" id=2]

[sub_resource type="DynamicFontData" id=33]
font_path = "res://font/Asquire.otf"

[sub_resource type="DynamicFont" id=28]
size = 21
font_data = SubResource( 33 )

[sub_resource type="DynamicFontData" id=32]
font_path = "res://font/Asquire.otf"

[sub_resource type="DynamicFont" id=24]
size = 21
font_data = SubResource( 32 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.6, 0.6, 0.6, 0.639216 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 1, 1, 1, 1 )

[node name="Video" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 38.0
texture = ExtResource( 2 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.5
margin_top = -46.5
margin_right = 73.5
margin_bottom = 46.5
color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -26.0
margin_right = 60.0
margin_bottom = 26.0

[node name="Labels" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 92.0
margin_bottom = 52.0
alignment = 1

[node name="FullScreen" type="Label" parent="HBoxContainer/Labels"]
margin_right = 92.0
margin_bottom = 23.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 28 )
text = "FullScreen"

[node name="Borderless" type="Label" parent="HBoxContainer/Labels"]
margin_top = 28.0
margin_right = 92.0
margin_bottom = 51.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 28 )
text = "Borderless"

[node name="Checks" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 96.0
margin_right = 120.0
margin_bottom = 52.0

[node name="FullScreen" type="CheckBox" parent="HBoxContainer/Checks"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Borderless" type="CheckBox" parent="HBoxContainer/Checks"]
margin_top = 28.0
margin_right = 24.0
margin_bottom = 52.0

[node name="BackVideo" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = 271.0
margin_right = 28.0
margin_bottom = 300.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 24 )
custom_styles/hover = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
text = "BACK"

[connection signal="toggled" from="HBoxContainer/Checks/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="toggled" from="HBoxContainer/Checks/Borderless" to="." method="_on_Borderless_toggled"]
[connection signal="pressed" from="BackVideo" to="." method="_on_BackVideo_pressed"]
